--- a/src/components/Home/Banner/Banner.css
+++ b/src/components/Home/Banner/Banner.css
@@ -61,6 +61,10 @@
     font-size: .75rem
 }
 
+.description__font{
+    font-size: .9rem;
+}
+
 .feature__div{
     display: flex;
     justify-content: space-around;
