--- a/src/components/Home/Brands/Brands.css
+++ b/src/components/Home/Brands/Brands.css
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: center;
     column-gap: 1rem;
-    margin-bottom: 3.5rem;
+    margin: 1rem 0 3.5rem 0;
 }
 
 .brand__item{
@@ -40,4 +40,24 @@
 .brand__item:hover span,
 .brand__item:hover img{
     opacity: 1;
+}
+
+.brands__card{
+    margin-bottom: 3rem;
+}
+
+@media only screen and (min-width: 768px){
+    .brands__filter ul{
+        column-gap: 2rem;
+    }
+    .brands__card{
+        width: 60%;
+        display: flex;
+        column-gap: 2rem;
+        flex-wrap: wrap;
+        margin: 0 auto 3rem auto;
+    }
+    .brands__card .popular__card{
+        margin: 1rem 0;
+    }
 }
