--- a/src/components/Home/Header/Header.css
+++ b/src/components/Home/Header/Header.css
@@ -1,3 +1,8 @@
+.nav__container{
+    /* position: fixed; */
+    
+}
+
 .nav{
     position: fixed;
     display: flex;
@@ -7,11 +12,11 @@
     transition: .3s ease;
     overflow: hidden;
     z-index: 100;
-    width: 100vw;
+    width: 100%;
 }
 
 .scroll{
-    background-color: rgb(0, 0, 0);
+    background-color: hsl(219, 4%, 4%);
 }
 
 .nav__logo{
